--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <html>
-	<head> A Healthy Happy You </head>
+	<head> 
+	<style>
+		h1 {text-align: center; font-family: fantasy; font-size: 50px;}
+
+		p {font-size: 30px; font-family: sans-serif;}
+
+		ol {font-size: 40px; color: purple; font-family: serif;  }
+
+		p.solid {border-style: solid;}
+
+		p.dotted {border-style: dotted;}
+
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+			<link rel="stylesheet"type="text/css"href="mystyle.css">
+	</style>
+
+	 </head>
 	<body style="background-color: pink;">
 		<h1> A Healthy Happy You </h1>
 		<p> The way you feel physically and mentally can impact your life. Taking care of your body will not only make you feel good, but also make you happier. In today's world, there are many processed foods and junk that make people feel awful. It is paramount that you learn about the foods that will make you feel your best. </p> 
 
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/LkevrQCPy2Y" frameborder="0" allowfullscreen></iframe>
+		<iframe width="960" height="515" src="https://www.youtube.com/embed/LkevrQCPy2Y" frameborder="0" allowfullscreen></iframe>
 
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/I6IjTTwEI3Y" frameborder="0" allowfullscreen></iframe>
+		<iframe width="960" height="515" src="https://www.youtube.com/embed/I6IjTTwEI3Y" frameborder="0" allowfullscreen></iframe>
 
 		<p> Living a healthier lifestyle is mostly dependent on what you are consuming. However a sedentary lifestyle is not ideal and will not always make you feel as good as you should. There are many ways to exercise that are fun and exciting! </p>
 
@@ -21,15 +37,15 @@
 
 		<h2> Working out does not have to be a dreaded activity! There are ways to have fun and burn some calories! </h2>
 
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/2faTou8uKyc" frameborder="0" allowfullscreen></iframe>
+		<iframe width="960" height="515" src="https://www.youtube.com/embed/2faTou8uKyc" frameborder="0" allowfullscreen></iframe>
 
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/lBmdAzJzYYg" frameborder="0" allowfullscreen></iframe>
+		<iframe width="960" height="515" src="https://www.youtube.com/embed/lBmdAzJzYYg" frameborder="0" allowfullscreen></iframe>
 
 		<h1> What does being Healthy mean? </h1>
 
 			<p> Being healthy should not be having the same body as your favorite celebrity or starving yourself everyday to lose weight. You should eat until you are satisfied, but eat the foods that are healthy and will promote a sustainable  amazing lifestyle. For example, 400 calories worth of chips will not make you feel as good as 400 calories worth of fruit or vegetables </p>
 
-		<img class= "img-circle" height="250" width="350" alt="vegetables" src="https://www.ag.ndsu.edu/faithcommunitiesalive/newsletters/fca-articles/june-is-fresh-fruit-and-vegetable-month/images/veggies.jpg?isImage=1">
+		<img class= "img-circle" height="550" width="650" alt="vegetables" src="https://www.ag.ndsu.edu/faithcommunitiesalive/newsletters/fca-articles/june-is-fresh-fruit-and-vegetable-month/images/veggies.jpg?isImage=1">
 
 		<div class="row">
 			<div class= "col-xs-6" style="background-color: lightblue;">
@@ -39,8 +55,30 @@
 		<div class= "col-xs-6" style="background-color:red;" >
 		<p> It is okay to have foods that are high in fat or not healthy once in a while. You never want to deprive yourself from a food that you genuinely enjoy. However, eat any food in moderation. Whether it is healthy or not, do not eat when you are not hungry. </p>
 		</div>
+		<h1> Need more refrences? </h1>
+		<iframe src="http://www.vegansociety.com/go-vegan/why-go-vegan" width= "500" height="650"> </iframe>
+		<iframe src= "http://www.healthyteennetwork.org/" width="500" height= "650"> </iframe>
+		<iframe src= "http://www.safeteens.org/nutrition-exercise/exercise-fitness/" width= "500" height= "650"> </iframe>
+		<iframe src= "http://selfesteem.dove.us/" width= "500" height= "650"> </iframe>
+		
+		<br> 
+
+		<p class= "dotted"> There are various women who have maintained a sustainable healthy lifestyle and have accomplished their dreams by doing so. </p>
+		<iframe src= "http://www.newyorker.com/magazine/2014/09/22/unlikely-ballerina" width= "500" height= "650"> </iframe>
+		<iframe width="500" height="650" src="https://www.youtube.com/embed/ZY0cdXr_1MA" frameborder="0" allowfullscreen></iframe>
+		<iframe src= "http://www.teamusa.org/usa-gymnastics/athletes/gabrielle-douglas" width= "500" height= "650"> </iframe>
+		<iframe width="500" height="650" src="https://www.youtube.com/embed/YP2yBAgDiQo" frameborder="0" allowfullscreen></iframe>
+		<p class= "solid"> Believe In Your (SELF)IE </p>
+
+		<h1> Besides Health and Fitness, it is crucial that women empower each other to be the best they possibly can be. Self confidence and love is the ultimate way to become a better, happier, and healthier you. </h1>
+
+		<iframe src= "http://www.fearlesslygirl.com/" width= "2050" height= "750"> </iframe>
 	</body>
 </html>
+ 
+
+
+
  
 
 
